fixed some minor naming issues